--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
